[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://ShadowBarrier.gd" id="1"]

[sub_resource type="RectangleShape2D" id="BarrierCollisionShape"]
size = Vector2(20, 200)

[node name="ShadowBarrier" type="StaticBody2D"]
script = ExtResource("1")

[node name="BarrierCollision" type="CollisionShape2D" parent="."]
shape = SubResource("BarrierCollisionShape")

[node name="BarrierVisual" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -100.0
offset_right = 10.0
offset_bottom = 100.0
color = Color(0.1, 0.1, 0.1, 0.9)

[node name="BarrierEffect" type="PointLight2D" parent="."]
color = Color(0.3, 0.1, 0.3, 1)
energy = 1.5
texture_scale = 6.0

[node name="PlayerDetection" type="Area2D" parent="."]

[node name="DetectionCollision" type="CollisionShape2D" parent="PlayerDetection"]
position = Vector2(-40, 0)
shape = SubResource("BarrierCollisionShape")

[node name="WallLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -130.0
offset_right = 120.0
offset_bottom = -90.0
text = "SHADOW BARRIER\nDefeat all shadows to pass"
horizontal_alignment = 1
vertical_alignment = 1
modulate = Color(1, 1, 1, 0)
auto_wrap_mode = 2